--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
+  flex: center;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 40rem;
+  height: 100%;
+  background-color: rgb(209, 202, 202);
+
+  margin: 4rem 0 0rem 10rem;
+  padding: 1rem 0 4rem 0;
 }
 
-.App-link {
-  color: #61dafb;
+.delay {
+  font-size: 12px;
+  margin: 1rem 0 0rem 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.countdown {
+  font-size: 8px;
+  font-weight: 900;
+  margin: 1rem 0 0 30rem;
+}
+
+.value {
+  font-size: 20px;
+  font-weight: 600;
+  margin: 0rem 0 1rem 0;
+}
+.inc-dec {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 4rem;
+  margin: 2rem 0 2rem 4.5rem;
+}
+
+.manual-inc-dec {
+  font-size: 12px;
+}
+
+.manual-button {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 4rem;
+  margin: 1rem 0 0 4.5rem;
+  font-size: 12px;
 }
